adj and noun on lab 6

--- a/6.VertxGatewayService.md
+++ b/6.VertxGatewayService.md
@@ -1,4 +1,4 @@
-## Creating a Vertx gateway with Circuit Breaker
+## Lab 6: Creating a Vertx gateway with Circuit Breaker
 
 In this lab we will create 3 microservices in 3 different runtimes supported by Red Hat OpenShift Application Runtimes (RHOAR)
 
@@ -21,7 +21,7 @@ We will be using LaunchPad to scaffold our projects. This will create the struct
 
 ####  Log into LaunchPad  
 
-You can perform these steps in two different ways by doing from webconsole or direct by using the CLI tool.
+You can perform these steps in two different ways by doing from Web Console or direct by using the CLI tool.
 
 First we need to log into the OpenShift Console. You can do so by doing the following on the command line:
 
@@ -57,12 +57,12 @@ Open the url in the browser.
 
     ![](./images/4.LaunchPadProperties.png)  
 
-    > NOTE: Make sure you keep the same application names as we will be referring them as service names later this lab.
+    > NOTE: Make sure you keep the same application names as we will be referring them as service names later in this lab.
 
 7. Summary Screen - Please review carefully and hit **Download as zip**.  
 8. Copy the zip file into any directory you choose (we will be using as a workspace) and unzip it.
 
-#### Importing Project into JBoss Developer Studio  
+#### Importing the Adjective Project into JBoss Developer Studio  
 
 We will import the project template you just created into the IDE and deploy it on OpenShift.
 
@@ -76,6 +76,15 @@ oc new-project springbootapps
 ```
 oc project springbootapps
 ```
+3. Run the following command to unzip the downloaded project bundle, or you can just double click.
+```shell
+unzip springboot-adj.zip
+```
+4. Open JBoss Developer Studio (Redsphere Icon).
+
+5. Choose the following menu options to import the project
+**File** -> **Import** -> **Maven** -> **Existing Maven Projects**, **Browse** to the location where the unzipped project is and select the project. (Most likely you may have unzipped it in the **Downloads** folder!!).
+
 Next step is to update the **Run Configurations** for your maven build. We will add the fabric8 plugin command to deploy into our OpenShift cluster.
 
    The `fabric8-maven-plugin` is a Maven plugin that accelerates development by allowing easy and quick deployment of Java applications to OpenShift. This plugin reduces the required steps by building the application, creating a docker image and deploying it to OpenShift in a single command, which is especially useful in the development stage, where multiple retries often accompany each step.
@@ -113,7 +122,7 @@ Log into your OpenShift instance and get the url for the service we deployed.
 
 Now that we got an understanding on how build and deploy process works, lets create a new service for returning list of adjectives.
 
-#### Create Adjective Model Class  
+#### Create the Adjective Model Class  
 
 Inside JBoss Developer Studio follow:
 
@@ -176,7 +185,7 @@ public class Adjective {
 ```    
 
 
-#### Create the Adjective Spring resource
+#### Create the Adjective resource
 
 Inside JBoss Developer Studio follow:
 
@@ -371,3 +380,347 @@ scale-sided
 ```
 
 #### Deploy the service to OpenShift
+
+Inside the JBoss Developer Studio execute the following:
+
+1. **Right Click** -> **Run As** -> **Run Configuration**.  
+2. Select Maven profile **springboot-adj** and hit **Run**.
+
+    ![](./images/4.BuildAdj.png)   
+
+3. Open the OpenShift Web Console and *copy* the url for your `springboot-adj` service. It should looks like this: http://springboot-adj-springbootapps.192.168.64.2.nip.io
+
+4. Open your browser and add to the end of the url `/api/adjective` so the full url will be similar to http://springboot-adj-springbootapps.192.168.64.2.nip.io/api/adjective
+
+5. You will see the `json` response payload like this:
+
+```JSON
+{"adjective":"fishified"}
+```
+
+#### Creating the Noun project template in LaunchPad
+
+Now we will create the Noun service but now using WildFly Swarm runtime.
+1. Open LaunchPad (you can get the url by opening the **rhoarpad** project).
+2. Click on **Launch Your Project**.
+3. Select Deployment Type: **I will build and run locally**.  
+4. Select **Rest API Level 0** and hit **Continue**.  
+
+    ![](./images/4.LaunchPadRest0.png)
+
+5. Select the **WildFly Swarm** runtime and hit **Next**.
+
+    ![](./images/3.WildFlySwarm.jpeg)
+
+6. Add properties.
+7. Update Artifact ID to `wildfly-noun`.
+8. Select Runtime Version: **2018.5.0(Community)**.
+
+    ![](./images/19.WildflySwarm.png)
+
+    > NOTE: Make sure you keep the same application names as we will be referring them as service names later in this lab.
+
+9. Summary Screen - Please review carefully and hit **Download as zip**.
+
+    ![](./images/20.WildflySwarm.png)
+
+10. Copy the zip file into any directory you choose (we will be using as a workspace) and unzip it.
+
+#### Importing the Noun Project into JBoss Developer Studio  
+
+We will import the project template you just created into the IDE and deploy it on OpenShift.
+
+> NOTE - Please ensure you are logged into OpenShift in the `wildflyswarmapps` project.
+
+1. Create a new project called `wildflyswarmapps`.
+```
+oc new-project wildflyswarmapps
+```
+2. Make sure your are using the right project.
+```
+oc project wildflyswarmapps
+```
+3. Run the following command to unzip the downloaded project bundle, or you can just double click.
+```shell
+unzip wildflyswarm-noun.zip
+```
+4. Open JBoss Developer Studio (Redsphere Icon).
+
+5. Choose the following menu options to import the project
+**File** -> **Import** -> **Maven** -> **Existing Maven Projects**, **Browse** to the location where the unzipped project is and select the project. (Most likely you may have unzipped it in the **Downloads** folder!!).
+
+6. Add the following dependency in the `pom.xml`.
+```xml
+<dependency>
+   <groupId>org.wildfly.swarm</groupId>
+   <artifactId>cdi</artifactId>
+</dependency>
+```
+    Next step is to update the **Run Configurations** for your maven build. We will add the fabric8 plugin command to deploy into our OpenShift cluster.
+
+   The `fabric8-maven-plugin` is a Maven plugin that accelerates development by allowing easy and quick deployment of Java applications to OpenShift. This plugin reduces the required steps by building the application, creating a docker image and deploying it to OpenShift in a single command, which is especially useful in the development stage, where multiple retries often accompany each step.
+
+7. Right click in the project name and select **Run As -> Run Configurations...**
+
+    ![](./images/4.JBDSBuildConfig1.png)
+
+8. Select **Maven Build** in the left menu list.
+9. In **Goals** type: `clean fabric8:deploy -Popenshift` and hit **Run**
+
+    ![](./images/4.JBDSBuildConfig2.png)  
+
+10. You should see a successful deployment at the end of logs.  
+
+    ![](./images/4.JBDSBuildSummary.png)
+
+###  Create Noun Rest Service
+
+Now that we got an understanding on how build and deploy process works, lets create a new service for returning list of adjectives.
+
+#### Create the Noun Model Class  
+
+Inside JBoss Developer Studio follow:
+
+1. **File** -> **New** -> **Class**.  
+2. Enter package name - `io.openshift.booster.noun.model`  
+3. Enter class name: `Noun`  
+
+    ![](./images/23.WildflySwarm.png)
+
+4. Replace the content by the following:
+
+  ```java
+  package io.openshift.booster.service.model;
+
+  import java.util.Objects;
+
+  public class Noun {
+
+      private String noun;
+
+      public Noun() {
+      }
+
+      public Noun(String noun) {
+          this.noun = noun;
+      }
+
+      public String getNoun() {
+          return noun;
+      }
+
+      public Noun noun(String noun) {
+          this.noun = noun;
+          return this;
+      }
+
+      @Override
+      public boolean equals(Object o) {
+          if (this == o) return true;
+          if (o == null || getClass() != o.getClass()) return false;
+          Noun noun1 = (Noun) o;
+          return Objects.equals(noun, noun1.noun);
+      }
+
+      @Override
+      public int hashCode() {
+          return Objects.hash(noun);
+      }
+
+      @Override
+      public String toString() {
+          final StringBuffer sb = new StringBuffer("Noun{");
+          sb.append("noun='").append(noun).append('\'');
+          sb.append('}');
+          return sb.toString();
+      }
+  }
+  ```
+
+5. Create the `NounResource` class in the package `io.openshift.booster.noun.service`.
+
+    ![](./images/24.WildflySwarm.png)
+
+6. Replace the content by the following:
+
+  ```java
+  package io.openshift.booster.noun.service;
+
+  import java.io.BufferedReader;
+  import java.io.InputStream;
+  import java.io.InputStreamReader;
+  import java.util.ArrayList;
+  import java.util.List;
+  import java.util.Random;
+
+  import javax.annotation.PostConstruct;
+  import javax.enterprise.context.ApplicationScoped;
+  import javax.ws.rs.Consumes;
+  import javax.ws.rs.DELETE;
+  import javax.ws.rs.GET;
+  import javax.ws.rs.POST;
+  import javax.ws.rs.Path;
+  import javax.ws.rs.PathParam;
+  import javax.ws.rs.Produces;
+  import javax.ws.rs.core.MediaType;
+  import javax.ws.rs.core.Response;
+
+  import io.openshift.booster.service.model.Noun;
+
+  @Path("/")
+  @ApplicationScoped
+
+  public class NounResource {
+
+      private List<Noun> nouns = new ArrayList<>();
+
+      @PostConstruct
+      public void loadData() {
+          try {
+              InputStream is = this.getClass().getClassLoader().getResourceAsStream("noun.txt");
+              if (is != null) {
+                  BufferedReader reader = new BufferedReader(new InputStreamReader(is));
+                  reader.lines()
+                          .forEach(noun -> nouns.add(new Noun(noun.trim())));
+              }
+          } catch (Exception e) {
+              e.printStackTrace();
+          }
+      }
+
+      @GET
+      @Produces(MediaType.APPLICATION_JSON)
+      @Path("/noun")
+      public Noun getNoun() {
+          return nouns.get(new Random().nextInt(nouns.size()));
+      }
+
+      @POST
+      @Consumes(MediaType.APPLICATION_JSON)
+      @Produces(MediaType.APPLICATION_JSON)
+      public Response addNoun(Noun noun) {
+          if (nouns.contains(noun)) {
+              return Response
+                      .status(Response.Status.CONFLICT)
+                      .build();
+          }
+
+          nouns.add(noun);
+
+          return Response
+                  .status(Response.Status.CREATED)
+                  .entity(noun)
+                  .build();
+      }
+
+      @DELETE
+      @Path("/{noun}")
+      public Response deleteNoun(@PathParam("noun") String nounName) {
+          Noun deletingNoun = new Noun(nounName);
+
+          if (!nouns.contains(deletingNoun)) {
+              return Response
+                      .status(Response.Status.NOT_FOUND)
+                      .build();
+          }
+
+          nouns.remove(deletingNoun);
+
+          return Response
+                  .noContent()
+                  .build();
+      }
+  }
+  ```
+
+7. Create the `noun.txt` file under the `src/main/resources`.
+
+8. Add the following content to `noun.txt`:
+
+  ```
+  apple-john
+  baggage
+  barnacle
+  bladder
+  boar-pig
+  bugbear
+  bum-bailey
+  canker-blossom
+  clack-dish
+  clotpole
+  coxcomb
+  codpiece
+  death-token
+  dewberry
+  flap-dragon
+  flax-wench
+  flirt-gill
+  foot-licker
+  fustilarian
+  giglet
+  gudgeon
+  haggard
+  harpy
+  hedge-pig
+  horn-beast
+  hugger-mugger
+  joithead
+  lewdster
+  lout
+  maggot-pie
+  malt-worm
+  mammet
+  measle
+  minnow
+  miscreant
+  moldwarp
+  mumble-news
+  nut-hook
+  pigeon-egg
+  pignut
+  puttock
+  pumpion
+  ratsbane
+  scut
+  skainsmate
+  strumpet
+  varlot
+  vassal
+  whey-face
+  wagtail
+  knave
+  blind-worm
+  popinjay
+  scullian
+  jolt-head
+  malcontent
+  devil-monk
+  toad
+  rascal
+  Basket-Cockle
+  rapscallion
+  ```
+
+#### Deploy the service to OpenShift
+
+Inside the JBoss Developer Studio execute the following:
+
+1. **Right Click** -> **Run As** -> **Run Configuration**.  
+2. Select Maven profile **wildflyswarm-noun** and hit **Run**.
+
+    ![](./images/25.WildflySwarm.png)  
+
+3. You will see the build finishing successfully.
+
+4. Open the OpenShift Web Console and go to your project `wildflyswarmapps` and *copy* the url for your `wildflyswarm-noun` service. It should looks like this: http://wildflyswarm-noun-wildflyswarmapps.192.168.64.2.nip.io
+
+5. Open your browser and add to the end of the url `/api/noun` so the full url will be similar to http://wildflyswarm-noun-wildflyswarmapps.192.168.64.2.nip.io/api/noun
+
+6. You will see the `json` response payload like this:
+
+```JSON
+{"noun":"coxcomb"}
+```
+
+
+![](./images/26.WildflySwarm.png)
