--- a/6.VertxGatewayService.md
+++ b/6.VertxGatewayService.md
@@ -475,7 +475,7 @@ unzip wildflyswarm-noun.zip
 
 ###  Create Noun Rest Service
 
-Now that we got an understanding on how build and deploy process works, lets create a new service for returning list of adjectives.
+Now that we got an understanding on how build and deploy process works, lets create a new service for returning list of nouns.
 
 #### Create the Noun Model Class  
 
@@ -722,4 +722,276 @@ Inside the JBoss Developer Studio execute the following:
 
 ```JSON
 {"noun":"coxcomb"}
+```
+
+#### Creating the Vert.x Gateway project template in LaunchPad
+
+Now we will create the Gateway service using Vert.x runtime.
+
+1. Open LaunchPad (you can get the url by opening the **rhoarpad** project).
+2. Click on **Launch Your Project**.
+3. Select Deployment Type: **I will build and run locally**.  
+4. Select **Rest API Level 0** and hit **Continue**.  
+
+    ![](./images/4.LaunchPadRest0.png)
+
+5. Select the **Eclipse Vert.x** runtime and hit **Next**.
+
+    ![](./images/1.vertx.png)
+
+6. Add properties.
+7. Update Artifact ID to `vertx-gateway`.
+8. Select Runtime Version: **3.5.0.Final (Community)**.
+
+    ![](./images/2.vertx.png)
+
+    > NOTE: Make sure you keep the same application names as we will be referring them as service names later in this lab.
+
+9. Summary Screen - Please review carefully and hit **Download as ZIP File**.
+
+    ![](./images/3.vertx.png)
+
+10. Copy the zip file into any directory you choose (we will be using as a workspace) and unzip it.
+
+#### Importing the Gateway Project into JBoss Developer Studio  
+
+We will import the project template you just created into the IDE and deploy it on OpenShift.
+
+> NOTE - Please ensure you are logged into OpenShift in the `vertxapps` project.
+
+1. Create a new project called `vertxapps`.
+```
+oc new-project vertxapps
+```
+2. Make sure your are using the right project.
+```
+oc project vertxapps
+```
+3. Run the following command to unzip the downloaded project bundle, or you can just double click.
+```shell
+unzip vertx-gateway.zip
+```
+4. Open JBoss Developer Studio (Redsphere Icon).
+
+5. Choose the following menu options to import the project
+**File** -> **Import** -> **Maven** -> **Existing Maven Projects**, **Browse** to the location where the unzipped project is and select the project. (Most likely you may have unzipped it in the **Downloads** folder!!).
+
+6. Add the following dependencies in the `pom.xml`.
+```xml
+<dependency>
+  <groupId>io.vertx</groupId>
+  <artifactId>vertx-circuit-breaker</artifactId>
+</dependency>
+<dependency>
+  <groupId>io.vertx</groupId>
+  <artifactId>vertx-rx-java</artifactId>
+</dependency>
+```
+7. Remove the `<scope>test</scope>` tag from the `vertx-web-client` dependency in the `pom.xml`.
+
+    Next step is to update the **Run Configurations** for your maven build. We will add the fabric8 plugin command to deploy into our OpenShift cluster.
+
+   The `fabric8-maven-plugin` is a Maven plugin that accelerates development by allowing easy and quick deployment of Java applications to OpenShift. This plugin reduces the required steps by building the application, creating a docker image and deploying it to OpenShift in a single command, which is especially useful in the development stage, where multiple retries often accompany each step.
+
+8. Right click in the project name and select **Run As -> Run Configurations...**
+
+    ![](./images/4.vertx.png)
+
+9. Select **Maven Build** in the left menu list.
+10. Make sure the **Base directory** is: `${workspace_loc:/vertx-gateway}`.
+11. In **Goals** type: `clean fabric8:deploy -Popenshift` and hit **Run**
+
+    ![](./images/5.vertx.png)  
+
+12. You should see a successful deployment at the end of logs.  
+
+    ![](./images/6.vertx.png)
+
+###  Create the Gateway Service
+
+Now that we got an understanding on how build and deploy process works, lets create a new service for returning the results from calls to adjective service and noun service.
+
+#### Create the Gateway Service Verticle  
+
+Inside JBoss Developer Studio follow:
+
+1. **File** -> **New** -> **Class**.  
+2. Enter package name - `io.openshift.booster.gateway.service`  
+3. Enter class name: `GatewayServiceVerticle`  
+
+    ![](./images/7.vertx.png)
+
+4. Replace the content by the following:
+
+```java
+  package io.openshift.booster.gateway.service;
+
+  import static io.netty.handler.codec.http.HttpHeaderValues.APPLICATION_JSON;
+  import static io.vertx.core.http.HttpHeaders.CONTENT_TYPE;
+
+  import java.util.HashMap;
+  import java.util.Map;
+
+  import io.vertx.circuitbreaker.CircuitBreakerOptions;
+  import io.vertx.core.Handler;
+  import io.vertx.core.json.JsonObject;
+  import io.vertx.ext.web.client.WebClientOptions;
+  import io.vertx.ext.web.handler.sockjs.BridgeOptions;
+  import io.vertx.ext.web.handler.sockjs.PermittedOptions;
+  import io.vertx.rxjava.circuitbreaker.CircuitBreaker;
+  import io.vertx.rxjava.circuitbreaker.HystrixMetricHandler;
+  import io.vertx.rxjava.core.AbstractVerticle;
+  import io.vertx.rxjava.ext.web.Router;
+  import io.vertx.rxjava.ext.web.RoutingContext;
+  import io.vertx.rxjava.ext.web.client.HttpResponse;
+  import io.vertx.rxjava.ext.web.client.WebClient;
+  import io.vertx.rxjava.ext.web.handler.StaticHandler;
+  import io.vertx.rxjava.ext.web.handler.sockjs.SockJSHandler;
+  import rx.Single;
+
+  public class GatewayServiceVerticle extends AbstractVerticle {
+
+      protected static final String template = "Congrats, %s %s!";
+      private Map<String, String> response;
+
+      private CircuitBreaker circuit;
+      private WebClient clientSpringboot;
+      private WebClient clientSwarm;
+
+      @Override
+      public void start() throws Exception {
+          circuit = CircuitBreaker.create("circuit-breaker", vertx,
+              new CircuitBreakerOptions()
+                  .setFallbackOnFailure(true)
+                  .setMaxFailures(3)
+                  .setResetTimeout(5000)
+                  .setNotificationAddress("circuit-breaker")
+                  .setTimeout(1000)
+          );
+
+          clientSpringboot = WebClient.create(vertx, new WebClientOptions()
+              .setDefaultHost("springboot-adj.springbootapps.svc")
+              .setDefaultPort(8080));
+
+          clientSwarm = WebClient.create(vertx, new WebClientOptions()
+                  .setDefaultHost("wildflyswarm-noun.wildflyswarmapps.svc")
+                  .setDefaultPort(8080));
+
+          response = new HashMap<String, String>();
+
+          Router router = Router.router(vertx);
+
+          router.get("/health").handler(rc -> rc.response().end("OK"));
+          router.get("/eventbus/*").handler(getSockJsHandler());
+          // The address is the circuit breaker notification address configured above.
+          router.get("/metrics").handler(HystrixMetricHandler.create(vertx, "circuit-breaker"));
+
+
+          router.get("/api/gateway").handler(this::dispatch);
+          router.get("/api/cb-state").handler(
+              rc -> rc.response()
+                  .putHeader(CONTENT_TYPE.toString(), APPLICATION_JSON.toString())
+                  .end(new JsonObject().put("state", circuit.state()).encodePrettily()));
+          router.get("/*").handler(StaticHandler.create());
+
+          vertx.createHttpServer()
+              .requestHandler(router::accept)
+              .listen(8080);
+      }
+
+
+      private void dispatch(RoutingContext rc) {
+
+      	Single<String> adjectiveCommandWithFallback = circuit.rxExecuteCommandWithFallback(
+              future ->
+                  clientSpringboot.get("/api/adjective").rxSend()
+                      .doOnEach(r -> System.out.println(r.getValue().bodyAsString()))
+                      .map(HttpResponse::bodyAsJsonObject)
+                      .map(json -> json.getString("adjective"))                    
+                      .subscribe(
+                          future::complete,
+                          future::fail
+                      ),
+              error -> {
+                  System.out.println("Fallback called for " + error.getMessage());
+                  error.printStackTrace();
+                  return "fallback-adjective";
+              }
+          );
+
+          Single<String> nounCommandWithFallback = circuit.rxExecuteCommandWithFallback(
+                  future ->
+                  clientSwarm.get("/api/noun").rxSend()
+                          .doOnEach(r -> System.out.println(r.getValue().bodyAsString()))
+                          .map(HttpResponse::bodyAsJsonObject)
+                          .map(json -> json.getString("noun"))                    
+                          .subscribe(
+                              future::complete,
+                              future::fail
+                          ),
+                  error -> {
+                      System.out.println("Fallback called for " + error.getMessage());
+                      error.printStackTrace();
+                      return "fallback-noun";
+                  }
+              );
+
+          adjectiveCommandWithFallback.subscribe(
+          		adjective -> {
+                      response.put("adjective", adjective);
+                  }
+              );
+
+          nounCommandWithFallback.subscribe(
+          		noun -> {
+          			response.put("noun", noun);
+                  }
+              );
+
+          JsonObject jsonResponse = new JsonObject()
+                  .put("content", String.format(template, response.get("adjective"), response.get("noun")));
+              rc.response()
+                  .putHeader(CONTENT_TYPE.toString(), APPLICATION_JSON.toString())
+                  .end(jsonResponse.encode());
+      }
+
+      private Handler<RoutingContext> getSockJsHandler() {
+          SockJSHandler sockJSHandler = SockJSHandler.create(vertx);
+          BridgeOptions options = new BridgeOptions();
+          options.addInboundPermitted(
+              new PermittedOptions().setAddress("circuit-breaker"));
+          options.addOutboundPermitted(
+              new PermittedOptions().setAddress("circuit-breaker"));
+          return sockJSHandler.bridge(options);
+      }
+  }
+```
+#### Delete the sample class in the project
+Using the LaunchPad it generates a couple of classes that might conflict with the Verticle we just created.
+
+1. Delete the `HttpApplication.java` under the package `io.openshift.booster` in `src/main/java`.
+2. Delete the classes `HttpApplicationTest.java` and `OpenShiftIT.java` under the package `io.openshift.booster` in `src/test/java`.
+
+
+#### Deploy the service to OpenShift
+
+Inside the JBoss Developer Studio execute the following:
+
+1. **Right Click** -> **Run As** -> **Run Configuration**.  
+2. Select Maven profile **vertx-gateway** and hit **Run**.
+
+    ![](./images/5.vertx.png)
+
+3. You will see the build finishing successfully.
+
+    ![](./images/6.vertx.png)
+
+4. Open the OpenShift Web Console and go to your project `vertxapps` and *copy* the url for your `vertx-gateway` service. It should looks like this: http://vertx-gateway-vertxapps.192.168.64.2.nip.io
+
+5. Open your browser and add to the end of the url `/api/gateway` so the full url will be similar to http://vertx-gateway-vertxapps.192.168.64.2.nip.io/api/gateway
+
+6. You will see the `json` response payload like this:
+
+```JSON
+{"content":"Congrats, infectious devil-monk!"}
 ```
