added circuit breaker steps

--- a/6.VertxGatewayService.md
+++ b/6.VertxGatewayService.md
@@ -995,3 +995,26 @@ Inside the JBoss Developer Studio execute the following:
 ```JSON
 {"content":"Congrats, infectious devil-monk!"}
 ```
+
+#### Testing the Circuit Breaker
+
+Circuit breaker is a design pattern used in modern software development. It is used to detect failures and encapsulates the logic of preventing a failure from constantly recurring, during maintenance, temporary external system failure or unexpected system difficulties.
+
+1. Open your **springbootapps** project in the OpenShift Web Console and scale down the appplication to 0 pods by using the arrows close to the blue circle.
+
+    ![](./images/8.vertx.png)
+
+
+2. After scaling down you will notice that now we have zero pods running.
+
+    ![](./images/9.vertx.png)
+
+3. Now test the vertx service again by opening the url in your browser add to the end of the url `/api/gateway` so the full url will be similar to http://vertx-gateway-vertxapps.192.168.64.2.nip.io/api/gateway
+
+4. You will see the `json` response payload like this:
+
+```JSON
+{"content":"Congrats, fallback-adjective devil-monk!"}
+```
+
+5. Notice the `fallback-adjective` part of the payload that was added in order to avoid a failure created by the previous step.
